using System;

namespace Dependency_Inversion_Solution;

public interface IPrinter
{
    void Print(ShoppingCart cart);
}

